@@ -51,6 +51,7 @@
         None
         On menu button
         NExt to title
+35. Fix selection appearance when using raster graphicssystem.
 
 0.62.9
 ------
